--- a/mia/Views/HomePage/Radio/HXRadioView.xib
+++ b/mia/Views/HomePage/Radio/HXRadioView.xib
@@ -30,16 +30,20 @@
                         <constraint firstAttribute="height" constant="128" id="Izd-nn-Ggz"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="歌曲名 演唱者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRQ-Sl-Nih">
+                <label opaque="NO" contentMode="left" text="歌曲名 演唱者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRQ-Sl-Nih">
                     <rect key="frame" x="27" y="258" width="228" height="22"/>
                     <animations/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="Ojq-AC-zoE" appends="YES" id="WRl-4J-ayQ"/>
+                    </connections>
                 </label>
                 <label opaque="NO" contentMode="left" text="Andy矢倉: 评论内容" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="207" translatesAutoresizingMaskIntoConstraints="NO" id="fmy-Es-e4Z" customClass="TTTAttributedLabel">
                     <rect key="frame" x="27" y="290" width="266" height="50"/>
                     <animations/>
+                    <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="WM5-Zv-pb0"/>
                     </constraints>
@@ -121,7 +125,12 @@
         </view>
         <tapGestureRecognizer id="4sq-YO-SqG">
             <connections>
-                <action selector="tapGesture" destination="iN0-l3-epB" id="z6i-EC-Dtv"/>
+                <action selector="coverTaped" destination="iN0-l3-epB" id="UOH-v7-Utd"/>
+            </connections>
+        </tapGestureRecognizer>
+        <tapGestureRecognizer id="Ojq-AC-zoE">
+            <connections>
+                <action selector="commentTaped" destination="iN0-l3-epB" id="nrt-h8-mdL"/>
             </connections>
         </tapGestureRecognizer>
     </objects>
