--- a/mia/Views/Common/HXInfectUserListView/HXInfectUserListCell.xib
+++ b/mia/Views/Common/HXInfectUserListView/HXInfectUserListCell.xib
@@ -3,50 +3,50 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HXInfectUserListCell" rowHeight="83" id="TIo-vP-lHy" customClass="HXInfectUserListCell">
-            <rect key="frame" x="0.0" y="0.0" width="328" height="83"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HXInfectUserListCell" rowHeight="81" id="TIo-vP-lHy" customClass="HXInfectUserListCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TIo-vP-lHy" id="Ivf-pj-x2E">
-                <rect key="frame" x="0.0" y="0.0" width="328" height="82"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xmb-UV-xMm">
-                        <rect key="frame" x="30" y="8" width="66" height="66"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xmb-UV-xMm">
+                        <rect key="frame" x="30" y="12" width="56" height="56"/>
                         <animations/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="xmb-UV-xMm" secondAttribute="height" multiplier="1:1" id="xQh-bz-J3j"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jaa-tB-u67">
-                        <rect key="frame" x="112" y="8" width="208" height="22"/>
+                        <rect key="frame" x="102" y="16" width="210" height="21"/>
                         <animations/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享着动态" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7W6-5E-Eld">
-                        <rect key="frame" x="112" y="52" width="208" height="22"/>
+                        <rect key="frame" x="102" y="43" width="210" height="21"/>
                         <animations/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <animations/>
                 <constraints>
-                    <constraint firstItem="xmb-UV-xMm" firstAttribute="top" secondItem="Ivf-pj-x2E" secondAttribute="top" constant="8" id="2Hq-Yr-GtB"/>
-                    <constraint firstItem="7W6-5E-Eld" firstAttribute="bottom" secondItem="xmb-UV-xMm" secondAttribute="bottom" id="8Mf-IK-okt"/>
+                    <constraint firstItem="xmb-UV-xMm" firstAttribute="top" secondItem="Ivf-pj-x2E" secondAttribute="top" constant="12" id="2Hq-Yr-GtB"/>
+                    <constraint firstItem="Jaa-tB-u67" firstAttribute="bottom" secondItem="xmb-UV-xMm" secondAttribute="centerY" constant="-3" id="8Ce-Dl-aH1"/>
                     <constraint firstItem="Jaa-tB-u67" firstAttribute="leading" secondItem="xmb-UV-xMm" secondAttribute="trailing" constant="16" id="Fxb-fo-nv7"/>
-                    <constraint firstAttribute="bottom" secondItem="xmb-UV-xMm" secondAttribute="bottom" constant="8" id="WhB-Qd-tAP"/>
+                    <constraint firstAttribute="bottom" secondItem="xmb-UV-xMm" secondAttribute="bottom" constant="12" id="WhB-Qd-tAP"/>
                     <constraint firstItem="7W6-5E-Eld" firstAttribute="leading" secondItem="xmb-UV-xMm" secondAttribute="trailing" constant="16" id="ZBV-lI-zUE"/>
-                    <constraint firstItem="Jaa-tB-u67" firstAttribute="top" secondItem="xmb-UV-xMm" secondAttribute="top" id="own-xG-Agb"/>
+                    <constraint firstItem="7W6-5E-Eld" firstAttribute="top" secondItem="xmb-UV-xMm" secondAttribute="centerY" constant="3" id="aMq-8r-C4R"/>
                     <constraint firstItem="xmb-UV-xMm" firstAttribute="leading" secondItem="Ivf-pj-x2E" secondAttribute="leading" constant="30" id="paD-dV-C2I"/>
-                    <constraint firstItem="7W6-5E-Eld" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Jaa-tB-u67" secondAttribute="bottom" constant="10" id="vkd-Fl-k1R"/>
                     <constraint firstAttribute="trailing" secondItem="7W6-5E-Eld" secondAttribute="trailing" constant="8" id="w5O-5k-5E3"/>
                     <constraint firstAttribute="trailing" secondItem="Jaa-tB-u67" secondAttribute="trailing" constant="8" id="zdF-zQ-Eue"/>
                 </constraints>
@@ -57,7 +57,7 @@
                 <outlet property="header" destination="xmb-UV-xMm" id="lsl-oT-zbr"/>
                 <outlet property="nameLabel" destination="Jaa-tB-u67" id="lL5-H0-P2p"/>
             </connections>
-            <point key="canvasLocation" x="367" y="320.5"/>
+            <point key="canvasLocation" x="363" y="319.5"/>
         </tableViewCell>
     </objects>
 </document>
