--- a/mia/Views/HomePage/Radio/HXRadioView.xib
+++ b/mia/Views/HomePage/Radio/HXRadioView.xib
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="STHeiti-Light.TTF">
+            <string>STXihei</string>
+            <string>STXihei</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -13,74 +19,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HP-DefaultCover" translatesAutoresizingMaskIntoConstraints="NO" id="Adt-yX-Kcn">
-                    <rect key="frame" x="15" y="0.0" width="290" height="290"/>
+                    <rect key="frame" x="35" y="0.0" width="250" height="250"/>
                     <animations/>
                     <gestureRecognizers/>
                     <constraints>
+                        <constraint firstAttribute="width" constant="250" id="4NV-0u-f8A"/>
                         <constraint firstAttribute="width" secondItem="Adt-yX-Kcn" secondAttribute="height" multiplier="1:1" id="QpK-Bh-3pn"/>
                     </constraints>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="4sq-YO-SqG" appends="YES" id="mjY-EV-qwO"/>
                     </connections>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HP-CoverMask" translatesAutoresizingMaskIntoConstraints="NO" id="I5f-fe-wyk">
-                    <rect key="frame" x="15" y="162" width="290" height="128"/>
-                    <animations/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="128" id="Izd-nn-Ggz"/>
-                    </constraints>
-                </imageView>
-                <label opaque="NO" contentMode="left" text="歌曲名 演唱者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRQ-Sl-Nih">
-                    <rect key="frame" x="27" y="258" width="228" height="22"/>
-                    <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                    <connections>
-                        <outletCollection property="gestureRecognizers" destination="Ojq-AC-zoE" appends="YES" id="WRl-4J-ayQ"/>
-                    </connections>
-                </label>
-                <label opaque="NO" contentMode="left" text="Andy矢倉: 评论内容" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="207" translatesAutoresizingMaskIntoConstraints="NO" id="fmy-Es-e4Z" customClass="TTTAttributedLabel">
-                    <rect key="frame" x="27" y="290" width="266" height="50"/>
-                    <animations/>
-                    <gestureRecognizers/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="WM5-Zv-pb0"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="地理位置信息" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkl-aD-tRT">
-                    <rect key="frame" x="221" y="350" width="84" height="17"/>
-                    <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HP-LocationIcon" translatesAutoresizingMaskIntoConstraints="NO" id="G7H-iu-GBN">
-                    <rect key="frame" x="193" y="349" width="20" height="20"/>
-                    <animations/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="G7H-iu-GBN" secondAttribute="height" multiplier="1:1" id="ig3-f1-SjC"/>
-                        <constraint firstAttribute="width" constant="20" id="kGm-cZ-R9b"/>
-                    </constraints>
-                </imageView>
-                <button opaque="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzP-as-myT">
-                    <rect key="frame" x="263" y="250" width="30" height="30"/>
-                    <animations/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="wzP-as-myT" secondAttribute="height" multiplier="1:1" id="Inj-Jl-gVj"/>
-                        <constraint firstAttribute="width" constant="30" id="cli-89-JVy"/>
-                    </constraints>
-                    <state key="normal" image="HP-UnStarIcon"/>
-                    <state key="selected" image="HP-StarIcon"/>
-                    <connections>
-                        <action selector="starButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="cgy-dx-Mke"/>
-                    </connections>
-                </button>
                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EuO-ig-wsS">
-                    <rect key="frame" x="133" y="117" width="55" height="55"/>
+                    <rect key="frame" x="133" y="97" width="55" height="55"/>
                     <animations/>
                     <state key="normal" image="P-PauseIcon"/>
                     <state key="selected" image="P-PlayIcon"/>
@@ -88,37 +39,54 @@
                         <action selector="playButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="y9a-UB-QF4"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzP-as-myT">
+                    <rect key="frame" x="140" y="270" width="40" height="40"/>
+                    <animations/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="wzP-as-myT" secondAttribute="height" multiplier="1:1" id="Inj-Jl-gVj"/>
+                        <constraint firstAttribute="width" constant="40" id="cli-89-JVy"/>
+                    </constraints>
+                    <state key="normal" image="HP-UnStarIcon"/>
+                    <state key="selected" image="HP-StarIcon"/>
+                    <connections>
+                        <action selector="starButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="cgy-dx-Mke"/>
+                    </connections>
+                </button>
+                <label opaque="NO" contentMode="left" text="评论内容+♫地理位置信息" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="207" translatesAutoresizingMaskIntoConstraints="NO" id="fmy-Es-e4Z" customClass="TTTAttributedLabel">
+                    <rect key="frame" x="35" y="378" width="250" height="23"/>
+                    <animations/>
+                    <gestureRecognizers/>
+                    <fontDescription key="fontDescription" name="STXihei" family="STXihei" pointSize="16"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享者昵称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBx-px-WgB">
+                    <rect key="frame" x="120" y="340" width="80" height="23"/>
+                    <animations/>
+                    <fontDescription key="fontDescription" name="STXihei" family="STXihei" pointSize="16"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" constant="15" id="1xn-AD-Vcl"/>
-                <constraint firstItem="dkl-aD-tRT" firstAttribute="leading" secondItem="G7H-iu-GBN" secondAttribute="trailing" constant="8" id="9E2-tH-8uI"/>
+                <constraint firstItem="fmy-Es-e4Z" firstAttribute="top" secondItem="gBx-px-WgB" secondAttribute="bottom" constant="15" id="4hM-fA-H9p"/>
+                <constraint firstItem="gBx-px-WgB" firstAttribute="centerX" secondItem="wzP-as-myT" secondAttribute="centerX" id="5ha-OU-Fgw"/>
                 <constraint firstItem="EuO-ig-wsS" firstAttribute="centerX" secondItem="Adt-yX-Kcn" secondAttribute="centerX" id="9RI-Mq-GaU"/>
-                <constraint firstItem="I5f-fe-wyk" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="BR9-HB-nqK"/>
-                <constraint firstItem="G7H-iu-GBN" firstAttribute="centerY" secondItem="dkl-aD-tRT" secondAttribute="centerY" id="OMS-Xf-qYo"/>
-                <constraint firstItem="fmy-Es-e4Z" firstAttribute="leading" secondItem="lRQ-Sl-Nih" secondAttribute="leading" id="SnG-ha-3hk"/>
-                <constraint firstItem="Adt-yX-Kcn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="U76-S6-GrS"/>
-                <constraint firstItem="lRQ-Sl-Nih" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" constant="12" id="UBI-bI-X3r"/>
-                <constraint firstItem="dkl-aD-tRT" firstAttribute="top" secondItem="fmy-Es-e4Z" secondAttribute="bottom" constant="10" id="UE8-DA-brT"/>
-                <constraint firstItem="fmy-Es-e4Z" firstAttribute="trailing" secondItem="wzP-as-myT" secondAttribute="trailing" id="ZSF-HZ-8kH"/>
-                <constraint firstItem="I5f-fe-wyk" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="dVE-Ge-v42"/>
-                <constraint firstItem="wzP-as-myT" firstAttribute="leading" secondItem="lRQ-Sl-Nih" secondAttribute="trailing" constant="8" id="eSj-Jk-Z71"/>
-                <constraint firstItem="I5f-fe-wyk" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="gAU-Hu-saf"/>
-                <constraint firstItem="dkl-aD-tRT" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="gCJ-v4-JYc"/>
+                <constraint firstItem="wzP-as-myT" firstAttribute="centerX" secondItem="Adt-yX-Kcn" secondAttribute="centerX" id="CgW-uw-Z7W"/>
+                <constraint firstItem="fmy-Es-e4Z" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="Klb-b5-TXW"/>
+                <constraint firstItem="fmy-Es-e4Z" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="Ogg-gF-1RN"/>
+                <constraint firstItem="Adt-yX-Kcn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="R15-Zk-3Zd"/>
+                <constraint firstItem="gBx-px-WgB" firstAttribute="top" secondItem="wzP-as-myT" secondAttribute="bottom" constant="30" id="aJZ-qb-c3q"/>
+                <constraint firstItem="wzP-as-myT" firstAttribute="top" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="20" id="gDx-VG-7kD"/>
                 <constraint firstItem="EuO-ig-wsS" firstAttribute="centerY" secondItem="Adt-yX-Kcn" secondAttribute="centerY" id="hIe-Py-Nqj"/>
-                <constraint firstItem="fmy-Es-e4Z" firstAttribute="top" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="hiM-qn-igw"/>
-                <constraint firstItem="wzP-as-myT" firstAttribute="bottom" secondItem="lRQ-Sl-Nih" secondAttribute="bottom" id="j91-e4-kug"/>
-                <constraint firstItem="lRQ-Sl-Nih" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="-10" id="jKA-kD-cJa"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="lGy-uv-HfU"/>
-                <constraint firstItem="wzP-as-myT" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" constant="-12" id="o6g-Q7-SJz"/>
             </constraints>
             <connections>
                 <outlet property="frontCoverView" destination="Adt-yX-Kcn" id="p3x-e1-iFU"/>
-                <outlet property="locationLabel" destination="dkl-aD-tRT" id="HFB-8M-8wU"/>
                 <outlet property="playButton" destination="EuO-ig-wsS" id="pra-Sy-2Dp"/>
                 <outlet property="shrareContentLabel" destination="fmy-Es-e4Z" id="4yO-YB-NY4"/>
-                <outlet property="songNameLabel" destination="lRQ-Sl-Nih" id="pBA-Ug-1wi"/>
                 <outlet property="starButton" destination="wzP-as-myT" id="fQu-cx-fy8"/>
             </connections>
             <point key="canvasLocation" x="535" y="383"/>
@@ -135,9 +103,7 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
-        <image name="HP-CoverMask" width="375" height="130"/>
         <image name="HP-DefaultCover" width="250" height="250"/>
-        <image name="HP-LocationIcon" width="12" height="17"/>
         <image name="HP-StarIcon" width="20" height="20"/>
         <image name="HP-UnStarIcon" width="20" height="20"/>
         <image name="P-PauseIcon" width="55" height="55"/>
